# anchor

./: .editorconfig  .gitignore  CONTRIBUTING.md  README.md  handbook.md  package-lock.json  package.json  vite.config.ts
src/: App.css  App.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: acceptance_tests.rs  amendments.rs  audit_log.rs  commands.rs  diff.rs  domain.rs  drift_rules.rs  editing.rs  export_compiler.rs  impact.rs  lib.rs  link_authoring.rs  main.rs  persistence.rs  readiness_gate.rs  recovery.rs  stale_propagation.rs  state_machine.rs  store.rs  traceability.rs  validation.rs
src/views/: AmendmentPanel.tsx  ArtifactDetail.tsx  ArtifactIndex.tsx  AuditTimeline.tsx  CommandPalette.tsx  ExportPanel.tsx  GraphView.tsx  ImpactView.tsx  LinkAuthoringView.tsx  ProjectHealthView.tsx  ReadinessGate.tsx  ScenarioSwitcher.tsx  ValidationDetail.tsx
