[package]
name = "anchor-core"
version = "0.1.0"
edition = "2021"
description = "Anchor drift-prevention engine — Rust backend"

[lib]
name = "anchor_core"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "anchor"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dev-dependencies]
